# mcp-handbook

./: .gitignore  README.md
appendix/a2a/: README.md
appendix/contextforge/: README.md
examples/01-hello/: README.md  demo.py  pyproject.toml  server.py
examples/02-rest-wrapper/: README.md  demo.py  pyproject.toml  rest_api.py  server.py
examples/03-errors/: README.md
examples/04-prompts/: README.md  pyproject.toml  server.py
examples/05-prompts/: README.md
examples/05-resources/: README.md  pyproject.toml  server.py
examples/06-notifications/: README.md  pyproject.toml  server.py
examples/06-progress/: README.md
examples/07-cancellation/: README.md  demo.py  pyproject.toml  rest_api.py  server.py
examples/08-sampling/: README.md
examples/09-roots-elicitation/: README.md
examples/10-http/: README.md
examples/11-oauth/: README.md
examples/12-security/: README.md
