[project]
name = "mcp-resources"
version = "0.1.0"
description = "FastMCP server exposing task data as MCP resources and resource templates on top of the REST service from 02."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
]
